--- a/attorney.html
+++ b/attorney.html
@@ -41,8 +41,6 @@
 	        	<li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
 	        	<li class="nav-item"><a href="practice.html" class="nav-link">Practice Areas</a></li>
 	        	<li class="nav-item active"><a href="attorney.html" class="nav-link">Doctors</a></li>
-	        	<li class="nav-item"><a href="pricing.html" class="nav-link">Pricing</a></li>
-	        	<li class="nav-item"><a href="blog.html" class="nav-link">Case Studies</a></li>
 	            <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
 			    <li class="nav-item"><a href="faq.html" class="nav-link">FAQ</a></li>
 	        </ul>
@@ -72,9 +70,7 @@
 			<div class="container">
 				<div class="row justify-content-center mb-5 pb-3">
           <div class="col-md-7 heading-section ftco-animate text-center">
-          	<span class="subheading">Experienced Doctors</span>
             <h2 class="mb-4">Meet our Doctors</h2>
-            <p>MBBS ( Medical Offier Sadar Hospital, Ramgarh. Ex Fortis Physician, Delhi ) &amp; BDS ( Ex dentist in Dr Jagdeesh dental hospital, Bangalore)</p>
           </div>
         </div>	
 				<div class="row">
@@ -83,8 +79,8 @@
 							<div class="img" style="background-image: url(images/person_1.jpg);"></div>
 							<div class="text pt-4">
 								<h3>Dr Mayank (MBBS)</h3>
-								<span class="position mb-2">Physician</span>
-								<p> Intern from Ram Manohar Lohia hospital, Delhi. He provided his services in FORTIS HOSPITAL , Gurgaon,Delhi. He then worked in DIN DAYAL UPADHYAY HOSPITAL, Delhi as well. Later, he entered Government services and currently posted as Medical officer, National health mission, Ramgarh. He has a warm , friendly nature and has an empathetic approach towards patiens</p>
+								<span class="position mb-2">Physician ( Medical Officer Sadar Hospital, Ramgarh. Ex Fortis Physician, Delhi)</span>
+								<p> Medical officer, National health mission, Ramgarh. Previously worked in DIN DAYAL UPADHYAY HOSPITAL. In past he has provided his services in FORTIS HOSPITAL, Delhi.</p>
 								<ul class="ftco-social d-flex">
 	                <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
 	                <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
@@ -99,8 +95,8 @@
 							<div class="img" style="background-image: url(images/person_2.jpg);"></div>
 							<div class="text pt-4">
 								<h3>Dr Sarita (BDS)</h3>
-								<span class="position mb-2">Senior Dentist</span>
-								<p>Rich experience of 7 years, worked as Senior Dentist & Consultant in a very reputed dental hospital in Bengaluru, Karnataka. Compassionate & committed to improve patients health , appearance, self confidence and overall quality of life. She has vast experience in general dentistry with a passion for cosmetic and preventive dentistry as well.</p>
+								<span class="position mb-2">Senior Dentist ( Ex dentist in Dr Jagdeesh dental hospital, Bangalore )</span>
+								<p>Rich experience of 7 years, worked as Senior Dentist & Consultant in Dr Jagdeesh dental hospital, Bengaluru. She has a vast experience in general dentistry with a passion for cosmetic and preventive dentistry.</p>
 								<ul class="ftco-social d-flex">
 	                <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
 	                <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
@@ -122,7 +118,7 @@
           <div class="col-md">
             <div class="ftco-footer-widget mb-4">
               <h2 class="ftco-heading-2">Our Motto</h2>
-              <p>You’ll Love the Way We Care for You, as we put more care into healthcare</p>
+              <p>You’ll Love the Way We Care for You, as we put more care into healthcare.</p>
               <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-3">
                 <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
                 <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
@@ -132,11 +128,10 @@
           </div>
           <div class="col-md">
             <div class="ftco-footer-widget mb-4 ml-md-4">
-              <h2 class="ftco-heading-2">Usefull Links</h2>
+              <h2 class="ftco-heading-2">Useful Links</h2>
               <ul class="list-unstyled">
                 <li><a href="practice.html">Cosmetic dentistry</a></li>
                 <li><a href="practice.html">Prosthetic dentistry</a></li>
-                <li><a href="practice.html">Cosmetic dentistry</a></li>
                 <li><a href="practice.html">Implant dentistry</a></li>
                 <li><a href="practice.html">General medicine</a></li>
               </ul>
@@ -156,7 +151,7 @@
           </div>
           <div class="col-md">
             <div class="ftco-footer-widget mb-4">
-            	<h2 class="ftco-heading-2">Have a Questions?</h2>
+            	<h2 class="ftco-heading-2">Have a Question?</h2>
             	<div class="block-23 mb-3">
 	              <ul>
 	                <li><span class="icon icon-map-marker"></span><span class="text">Sparh Health Care,Ground floor, Bhoo Lok Apartment, Hinoo Main Road, Ranchi, Jharkhand</span></li>
