--- a/index.html
+++ b/index.html
@@ -41,8 +41,6 @@
 	        	<li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
 	        	<li class="nav-item"><a href="practice.html" class="nav-link">Practice Areas</a></li>
 	        	<li class="nav-item"><a href="attorney.html" class="nav-link">Doctors</a></li>
-	        	<li class="nav-item"><a href="pricing.html" class="nav-link">Pricing</a></li>
-	        	<li class="nav-item"><a href="blog.html" class="nav-link">Case Studies</a></li>
 	          <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
 			  <li class="nav-item"><a href="faq.html" class="nav-link">FAQ</a></li>
 	        </ul>
@@ -188,12 +186,12 @@ Root canals can now be performed easier, faster and with minimal discomfort.</p>
 	          <div class="pl-md-5 ml-md-5 mb-5">
 
 	          				<p>General physician:</p>
-	          				<p>Our specialist always aspire to bridge the gap between your benefit plan and the health needs of your family. We aim at providing best general health care advice with as less test as possible</p>
+	          				<p>Our specialist aspires to bridge the gap between your benefit plan and the health needs of your family. We aim at providing the best general health care advice while trying to keep the required tests to a minimum</p>
 
 							<p>Dental Clinic / Dentistry:</p>
 							<p>
-We are determined at providing best dental treatment at affordable rates with outmost care. Providing preventive Dentistry instead of curative dentistry naims at keeping tooth extractions and root canals as last resort</p>
-							<p>We try our best to save tooth from any major treatment. We also aim to maintain overall  health of teeth for longevity</p>
+We are determined to provide the best dental treatment at affordable rates with utmost care. Providing preventive Dentistry instead of curative dentistry aims at keeping tooth extractions and root canals as the last resort</p>
+							<p>We try our best to take care of your oral health without involving any major treatments; We also aim at maintaining the overall health of your teeth to ensure their longevity</p>
 							<p><a href="#" class="btn-custom">Learn More <span class="ion-ios-arrow-forward"></span></a></p>
 						</div>
 					</div>
@@ -572,7 +570,7 @@ We are determined at providing best dental treatment at affordable rates with ou
           <div class="col-md">
             <div class="ftco-footer-widget mb-4">
               <h2 class="ftco-heading-2">Our Motto</h2>
-              <p>You’ll Love the Way We Care for You, as we put more care into healthcare</p>
+              <p>You’ll Love the Way We Care for You, as we put more care into healthcare.</p>
               <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-3">
                 <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
                 <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
@@ -586,7 +584,6 @@ We are determined at providing best dental treatment at affordable rates with ou
               <ul class="list-unstyled">
                 <li><a href="practice.html">Cosmetic dentistry</a></li>
                 <li><a href="practice.html">Prosthetic dentistry</a></li>
-                <li><a href="practice.html">Cosmetic dentistry</a></li>
                 <li><a href="practice.html">Implant dentistry</a></li>
                 <li><a href="practice.html">General medicine</a></li>
               </ul>
@@ -606,7 +603,7 @@ We are determined at providing best dental treatment at affordable rates with ou
           </div>
           <div class="col-md">
             <div class="ftco-footer-widget mb-4">
-            	<h2 class="ftco-heading-2">Have a Questions?</h2>
+            	<h2 class="ftco-heading-2">Have a Question?</h2>
             	<div class="block-23 mb-3">
 	              <ul>
 	                <li><span class="icon icon-map-marker"></span><span class="text">Sparh Health Care,Ground floor, Bhoo Lok Apartment, Hinoo Main Road, Ranchi, Jharkhand</span></li>
