--- a/practice.html
+++ b/practice.html
@@ -42,7 +42,6 @@
 	        	<li class="nav-item active"><a href="practice.html" class="nav-link">Practice Areas</a></li>
 	        	<li class="nav-item"><a href="attorney.html" class="nav-link">Doctors</a></li>
 	        	<li class="nav-item"><a href="pricing.html" class="nav-link">Pricing</a></li>
-	        	<li class="nav-item"><a href="blog.html" class="nav-link">Case Studies</a></li>
 	          <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
 			  <li class="nav-item"><a href="faq.html" class="nav-link">FAQ</a></li>
 	        </ul>
@@ -75,7 +74,7 @@
 							<a href="#" class="img" style="background-image: url(images/medicine.jpg);"></a>
 							<div class="info">
 								<h3><a href="#">General medicine</a></h3>
-								<p>Our clinic interest lies in handling infectious diseases, lifestyle diseaes, adolescent medicine, geriatric medicine</p>
+								<p>Our doctors' interests lie in handling infectious diseases, lifestyle diseases, adolescent medicine, geriatric medicine.</p>
 							</div>
 						</div>
 					</div>
@@ -84,7 +83,7 @@
 							<a href="#" class="img" style="background-image: url(images/preventive.jpg);"></a>
 							<div class="info">
 								<h3><a href="#">Preventive treatment</a></h3>
-								<p>We aim at providing all round care to avoid development of diseases in long run.</p>
+								<p>We aim to provide all round care to avoid the development of diseases in the long run.</p>
 							</div>
 						</div>
 					</div>
@@ -93,7 +92,7 @@
 							<a href="#" class="img" style="background-image: url(images/HealthCounselling.jpg);"></a>
 							<div class="info">
 								<h3><a href="#">Health counseling</a></h3>
-								<p>Better advise on life style and infection control for better quality of life for our patients</p>
+								<p>Better advice on life style and infection control for better quality of life for our patients.</p>
 							</div>
 						</div>
 					</div>
@@ -111,7 +110,7 @@
 							<a href="#" class="img" style="background-image: url(images/cosmetic.jpg);"></a>
 							<div class="info">
 								<h3><a href="#">Cosmetic dentistry</a></h3>
-								<p>Provides you better smile with cosmetic intervention so that you can flaunt it</p>
+								<p>Provides you with a better smile using cosmetic intervention so that you can flaunt it.</p>
 							</div>
 						</div>
 					</div>
@@ -120,7 +119,7 @@
 							<a href="#" class="img" style="background-image: url(images/Implant.jpg);"></a>
 							<div class="info">
 								<h3><a href="#">Implant dentistry</a></h3>
-								<p>Fast ,fixed and predictable dental treatment.</p>
+								<p>Fast and predictable dental treatment.</p>
 							</div>
 						</div>
 					</div>
@@ -129,7 +128,7 @@
 							<a href="#" class="img" style="background-image: url(images/orthodontics.jpg);"></a>
 							<div class="info">
 								<h3><a href="#"> Orthodontics</a></h3>
-								<p>Alligns teeth to better positioning so that you can have perfect arrangement of teeth</p>
+								<p>Alignment of teeth to a better positioning to give you a perfect look.</p>
 							</div>
 						</div>
 					</div>
@@ -138,7 +137,7 @@
 							<a href="#" class="img" style="background-image: url(images/oral.jpg);"></a>
 							<div class="info">
 								<h3><a href="#">Oral surgery</a></h3>
-								<p>Aims to remove only what cannot be saved. OUR LAST RESORT</p>
+								<p>Aims to remove only what cannot be saved.</p>
 							</div>
 						</div>
 					</div>
@@ -147,7 +146,7 @@
 							<a href="#" class="img" style="background-image: url(images/pediodontics.jpg);"></a>
 							<div class="info">
 								<h3><a href="#">Pedodontics(Pediatric) dentistry</a></h3>
-								<p>All round treatment of kids and teens so that they fall in love with dentistry.Also preparing them for future by teaching better oral hygiene</p>
+								<p>Our dentists promote the dental health of children as well as serve as educational resources for parents.</p>
 							</div>
 						</div>
 					</div>
@@ -156,7 +155,7 @@
 							<a href="#" class="img" style="background-image: url(images/periodontal.jpg);"></a>
 							<div class="info">
 								<h3><a href="#">Periodontal </a></h3>
-								<p>Gives you healthy gums- stronger teeth - improves your overall  health.It has been clinically proven to avoid many diseases including heart disease's</p>
+								<p>Aims at giving you healthy gums and stronger teeth to improve your overall health.</p>
 							</div>
 						</div>
 					</div>
@@ -165,26 +164,11 @@
 							<a href="#" class="img" style="background-image: url(images/endodontics.jpg);"></a>
 							<div class="info">
 								<h3><a href="#">Endodontics</a></h3>
-								<p>We have best equipment to provide you with best root canals and other restorative treatment</p>
+								<p>We have the latest equipment to provide you with the best root canals and other restorative treatments.</p>
 							</div>
 						</div>
 					</div>
 				</div>
-				<div class="row mt-5">
-          <div class="col text-center">
-            <div class="block-27">
-              <ul>
-                <li><a href="#">&lt;</a></li>
-                <li class="active"><span>1</span></li>
-                <li><a href="#">2</a></li>
-                <li><a href="#">3</a></li>
-                <li><a href="#">4</a></li>
-                <li><a href="#">5</a></li>
-                <li><a href="#">&gt;</a></li>
-              </ul>
-            </div>
-          </div>
-        </div>
 			</div>
 		</section>
 
@@ -194,7 +178,7 @@
           <div class="col-md">
             <div class="ftco-footer-widget mb-4">
               <h2 class="ftco-heading-2">Our Motto</h2>
-              <p>You’ll Love the Way We Care for You, as we put more care into healthcare</p>
+              <p>You’ll Love the Way We Care for You, as we put more care into healthcare.</p>
               <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-3">
                 <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
                 <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
@@ -204,11 +188,10 @@
           </div>
           <div class="col-md">
             <div class="ftco-footer-widget mb-4 ml-md-4">
-              <h2 class="ftco-heading-2">Usefull Links</h2>
+              <h2 class="ftco-heading-2">Useful Links</h2>
               <ul class="list-unstyled">
                 <li><a href="#">Cosmetic dentistry</a></li>
                 <li><a href="#">Prosthetic dentistry</a></li>
-                <li><a href="#">Cosmetic dentistry</a></li>
                 <li><a href="#">Implant dentistry</a></li>
                 <li><a href="#">General medicine</a></li>
               </ul>
@@ -228,7 +211,7 @@
           </div>
           <div class="col-md">
             <div class="ftco-footer-widget mb-4">
-            	<h2 class="ftco-heading-2">Have a Questions?</h2>
+            	<h2 class="ftco-heading-2">Have a Question?</h2>
             	<div class="block-23 mb-3">
 	              <ul>
 	                <li><span class="icon icon-map-marker"></span><span class="text">Sparh Health Care,Ground floor, Bhoo Lok Apartment, Hinoo Main Road, Ranchi, Jharkhand</span></li>
