--- a/faq.html
+++ b/faq.html
@@ -41,8 +41,6 @@
 	        	<li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
 	        	<li class="nav-item"><a href="practice.html" class="nav-link">Practice Areas</a></li>
 	        	<li class="nav-item active"><a href="attorney.html" class="nav-link">Doctors</a></li>
-	        	<li class="nav-item"><a href="pricing.html" class="nav-link">Pricing</a></li>
-	        	<li class="nav-item"><a href="blog.html" class="nav-link">Case Studies</a></li>
 	          <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
 	        </ul>
 	      </div>
@@ -208,7 +206,7 @@
           <div class="col-md">
             <div class="ftco-footer-widget mb-4">
               <h2 class="ftco-heading-2">Our Motto</h2>
-              <p>You’ll Love the Way We Care for You, as we put more care into healthcare</p>
+              <p>You’ll Love the Way We Care for You, as we put more care into healthcare.</p>
               <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-3">
                 <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
                 <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
@@ -218,11 +216,10 @@
           </div>
           <div class="col-md">
             <div class="ftco-footer-widget mb-4 ml-md-4">
-              <h2 class="ftco-heading-2">Usefull Links</h2>
+              <h2 class="ftco-heading-2">Useful Links</h2>
               <ul class="list-unstyled">
                 <li><a href="practice.html">Cosmetic dentistry</a></li>
                 <li><a href="practice.html">Prosthetic dentistry</a></li>
-                <li><a href="practice.html">Cosmetic dentistry</a></li>
                 <li><a href="practice.html">Implant dentistry</a></li>
                 <li><a href="practice.html">General medicine</a></li>
               </ul>
@@ -242,7 +239,7 @@
           </div>
           <div class="col-md">
             <div class="ftco-footer-widget mb-4">
-            	<h2 class="ftco-heading-2">Have a Questions?</h2>
+            	<h2 class="ftco-heading-2">Have a Question?</h2>
             	<div class="block-23 mb-3">
 	              <ul>
 	                <li><span class="icon icon-map-marker"></span><span class="text">Sparh Health Care,Ground floor, Bhoo Lok Apartment, Hinoo Main Road, Ranchi, Jharkhand</span></li>
