--- a/pricing.html
+++ b/pricing.html
@@ -42,7 +42,6 @@
 	        	<li class="nav-item"><a href="practice.html" class="nav-link">Practice Areas</a></li>
 	        	<li class="nav-item"><a href="attorney.html" class="nav-link">Doctors</a></li>
 	        	<li class="nav-item active"><a href="pricing.html" class="nav-link">Pricing</a></li>
-	        	<li class="nav-item"><a href="blog.html" class="nav-link">Case Studies</a></li>
 	          <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
 			  <li class="nav-item"><a href="faq.html" class="nav-link">FAQ</a></li>
 	        </ul>
@@ -197,7 +196,7 @@
           <div class="col-md">
             <div class="ftco-footer-widget mb-4">
               <h2 class="ftco-heading-2">Our Motto</h2>
-              <p>You’ll Love the Way We Care for You, as we put more care into healthcare</p>
+              <p>You’ll Love the Way We Care for You, as we put more care into healthcare.</p>
               <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-3">
                 <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
                 <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
@@ -207,11 +206,10 @@
           </div>
           <div class="col-md">
             <div class="ftco-footer-widget mb-4 ml-md-4">
-              <h2 class="ftco-heading-2">Usefull Links</h2>
+              <h2 class="ftco-heading-2">Useful Links</h2>
               <ul class="list-unstyled">
                 <li><a href="practice.html">Cosmetic dentistry</a></li>
                 <li><a href="practice.html">Prosthetic dentistry</a></li>
-                <li><a href="practice.html">Cosmetic dentistry</a></li>
                 <li><a href="practice.html">Implant dentistry</a></li>
                 <li><a href="practice.html">General medicine</a></li>
               </ul>
