--- a/faq.html
+++ b/faq.html
@@ -42,6 +42,7 @@
 	        	<li class="nav-item"><a href="practice.html" class="nav-link">Practice Areas</a></li>
 	        	<li class="nav-item active"><a href="attorney.html" class="nav-link">Doctors</a></li>
 	          <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
+			  <li class="nav-item"><a href="faq.html" class="nav-link">FAQ</a></li>
 	        </ul>
 	      </div>
 	    </div>
