commented out unwanted text

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@ Root canals can now be performed easier, faster and with minimal discomfort.</p>
 		              </div>
 		              <div class="media-body pl-4">
 		                <h3 class="heading">Pedodontics/Child Dentistry</h3>
-		                <p>Text- dental care starts at home as early as 6 months of age. We provide all round care so that dental cavity and uneven teeth is prevented, called as preventive dentistry.</p>
+		                <p>Dental care starts at home as early as 6 months of age. We provide all round care so that dental cavity and uneven teeth is prevented, called as preventive dentistry.</p>
 		              </div>
 		            </div>      
 		          </div>
@@ -158,7 +158,7 @@ Root canals can now be performed easier, faster and with minimal discomfort.</p>
 		              </div>
 		              <div class="media-body pl-4">
 		                <h3 class="heading">Dentures/False Teeth - Fixed/Removable</h3>
-		                <p>Text- smile is most beautiful makeup which can be worn. We provide all varieties of  tooth coloured dentures and ceramic teeth</p>
+		                <p>Smile is most beautiful makeup which can be worn. We provide all varieties of  tooth coloured dentures and ceramic teeth</p>
 		              </div>
 		            </div>      
 		          </div>
